--- a/CRMPhone/Dialogs/Admins/ServiceCompanyAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/ServiceCompanyAddOrEditDialog.xaml
@@ -13,17 +13,28 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
     <DockPanel Grid.Row="0">
             <TextBlock Margin="5" VerticalAlignment="Center" Text="Название:"/>
             <TextBox Margin="5" HorizontalAlignment="Right" Width="300" MaxLength="255" TextWrapping="Wrap" Text="{Binding ServiceName}">
             </TextBox>
         </DockPanel>
-        <StackPanel Grid.Row="1" Margin="5">
-            <TextBlock Margin="5" VerticalAlignment="Center" Text="Информация:"/>
-            <TextBox Height="180" Text="{Binding ServiceCompanyInfo}"/>
+        <StackPanel Grid.Row="1">
+            <DockPanel>
+                <CheckBox Margin = "15,3" Content="Отправка СМС жильцу" IsChecked="{Binding SendSmsToClient}"></CheckBox>
+                <CheckBox Margin = "15,3" Content="Отправка СМС исполнителю" IsChecked="{Binding SendSmsToWorker}"></CheckBox>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Margin="5" VerticalAlignment="Center" Text="Наименование псевдонима отправителя:"/>
+                <TextBox Margin="5" Width="120" MaxLength="11" TextWrapping="Wrap" Text="{Binding SmsSenderName}"/>
+            </DockPanel>
         </StackPanel>
-        <StackPanel Grid.Row="2" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="2" Margin="5">
+            <TextBlock Margin="5" VerticalAlignment="Center" Text="Информация:"/>
+            <TextBox Height="135" Text="{Binding ServiceCompanyInfo}"/>
+        </StackPanel>
+        <StackPanel Grid.Row="3" HorizontalAlignment="Right">
             <Button Margin="5" Width="120" Height="24" Command="{Binding Path=SaveCommand}">Сохранить</Button>
         </StackPanel>
     </Grid>
