--- a/CRMPhone/Controls/RequestControl.xaml
+++ b/CRMPhone/Controls/RequestControl.xaml
@@ -126,6 +126,27 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
+                <DataGridTemplateColumn Width="30" >
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <Image Source="pack://application:,,,/Images/play.png" Height="24" HorizontalAlignment="Center"/>
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </DataGridTemplateColumn.HeaderStyle>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate DataType="dto:RequestForListDto">
+                            <Button Width="20" VerticalAlignment="Center" Command="{Binding ElementName=RequestsGrid, Path=DataContext.PlayCommand}" CommandParameter="{Binding ElementName=RequestsGrid, Path=SelectedItem}"
+                                            Visibility="{Binding HasRecord, Converter={StaticResource BooleanToVisibility} }">
+                                <Image Source="pack://application:,,,/Images/play.png"/>
+                            </Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTextColumn Header="№" Width="60"
                              Binding="{Binding Path=Id}">
                     <DataGridTextColumn.ElementStyle>
