--- a/CRMPhone/Dialogs/MeterDeviceDialog.xaml
+++ b/CRMPhone/Dialogs/MeterDeviceDialog.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:CRMPhone.Dialogs"
         xmlns:crmPhone="clr-namespace:CRMPhone"
         mc:Ignorable="d"
-        Title="Показания приборов учёта" MinHeight="300" MinWidth ="700" Height="300" Width="700"
+        Title="Показания приборов учёта" MinHeight="300" MinWidth ="700" Height="300" Width="760"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
         FontSize="12"
@@ -58,7 +58,7 @@
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Header="Электро Т1" Width="100"
+                    <DataGridTextColumn Header="Электро Т1" Width="90"
                                             Binding="{Binding Path=Electro1}">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="{x:Type TextBlock}">
@@ -67,7 +67,7 @@
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Header="Электро Т2" Width="100"
+                    <DataGridTextColumn Header="Электро Т2" Width="90"
                                             Binding="{Binding Path=Electro2}">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="{x:Type TextBlock}">
@@ -76,7 +76,7 @@
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Header="ГВС" Width="100"
+                    <DataGridTextColumn Header="ГВС стояк 1" Width="80"
                                             Binding="{Binding Path=HotWater1}">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="{x:Type TextBlock}">
@@ -86,7 +86,7 @@
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Header="ХВС" Width="100"
+                    <DataGridTextColumn Header="ХВС стояк 1" Width="80"
                                             Binding="{Binding Path=ColdWater1}">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="{x:Type TextBlock}">
@@ -96,7 +96,7 @@
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <!--<DataGridTextColumn Header="Ванна ГВС" Width="80"
+                    <DataGridTextColumn Header="ГВС стояк 2" Width="80"
                                             Binding="{Binding Path=HotWater2}">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="{x:Type TextBlock}">
@@ -106,7 +106,7 @@
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Header="Ванна ХВС" Width="80"
+                    <DataGridTextColumn Header="ХВС стояк 2" Width="80"
                                             Binding="{Binding Path=ColdWater2}">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="{x:Type TextBlock}">
@@ -115,7 +115,7 @@
 
                             </Style>
                         </DataGridTextColumn.ElementStyle>
-                    </DataGridTextColumn>-->
+                    </DataGridTextColumn>
                     <DataGridTextColumn Header="Отопление" Width="100"
                                             Binding="{Binding Path=Heating}">
                         <DataGridTextColumn.ElementStyle>
@@ -139,21 +139,21 @@
                     <TextBox Margin="3" VerticalAlignment="Center" Text="{Binding Electro2}"/>
                 </StackPanel>
                 <StackPanel>
-                    <TextBlock Margin="10,3" VerticalAlignment="Center" Text="ГВС" MinWidth="60"/>
+                    <TextBlock Margin="10,3" VerticalAlignment="Center" Text="ГВС стояк 1" MinWidth="60"/>
                     <TextBox Margin="3" VerticalAlignment="Center" Text="{Binding HotWater1}"/>
                 </StackPanel>
                 <StackPanel>
-                    <TextBlock Margin="10,3" VerticalAlignment="Center" Text="ХВС" MinWidth="60"/>
+                    <TextBlock Margin="10,3" VerticalAlignment="Center" Text="ХВС стояк 1" MinWidth="60"/>
                     <TextBox Margin="3" VerticalAlignment="Center" Text="{Binding ColdWater1}"/>
                 </StackPanel>
-                <!--<StackPanel>
-                    <TextBlock Margin="10,3" VerticalAlignment="Center" Text="Ванна ГВС"/>
+                <StackPanel>
+                    <TextBlock Margin="10,3" VerticalAlignment="Center" Text="ГВС стояк 2"/>
                     <TextBox Margin="3" VerticalAlignment="Center" Text="{Binding HotWater2}"/>
                 </StackPanel>
                 <StackPanel>
-                    <TextBlock Margin="10,3" VerticalAlignment="Center" Text="Ванна ХВС"/>
+                    <TextBlock Margin="10,3" VerticalAlignment="Center" Text="ХВС стояк 2"/>
                     <TextBox Margin="3" VerticalAlignment="Center" Text="{Binding ColdWater2}"/>
-                </StackPanel>-->
+                </StackPanel>
                 <StackPanel>
                     <TextBlock Margin="10,3" VerticalAlignment="Center" Text="Отопление"/>
                     <TextBox Margin="3" VerticalAlignment="Center" Text="{Binding Heating}"/>
