--- a/CRMPhone/Controls/Admins/HouseAdminControl.xaml
+++ b/CRMPhone/Controls/Admins/HouseAdminControl.xaml
@@ -14,13 +14,19 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <WrapPanel>
-            <TextBlock Text="Город:" Margin="3"/>
+            <TextBlock Text="Город:" Margin="3" VerticalAlignment="Center"/>
             <ComboBox Margin="5" HorizontalAlignment="Right" Width="185" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCity}" ItemsSource="{Binding CityList}">
                 <ComboBox.Resources>
                     <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                 </ComboBox.Resources>
             </ComboBox>
-
+            <TextBlock Text="УК:" Margin="3" VerticalAlignment="Center"/>
+            <ComboBox Margin="5" HorizontalAlignment="Right" Width="185" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCompany}" ItemsSource="{Binding CompanyList}">
+                <ComboBox.Resources>
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
+                </ComboBox.Resources>
+            </ComboBox>
+<Button Command="{Binding CreateFondCommand}" Content="Выгрузить жил. фонд" Margin="3" Padding="10,0"/>
         </WrapPanel>
     <Grid Row="1">
         <Grid.RowDefinitions>
@@ -80,7 +86,7 @@
                               CommandParameter="{Binding ElementName=HouseGrid, Path=SelectedItem}" />
             </DataGrid.InputBindings>
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Дома" Width="*"
+                <DataGridTextColumn Header="Дом" Width="*"
                                     Binding="{Binding Path=FullName}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
@@ -89,7 +95,16 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="УК" Width="*"
+                    <DataGridTextColumn Header="Квартир" Width="*"
+                                    Binding="{Binding Path=FlatCount}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="{x:Type TextBlock}">
+                                <Setter Property="TextWrapping" Value="Wrap"/>
+                                <Setter Property="Margin" Value="3"/>
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="УК" Width="*"
                                     Binding="{Binding Path=ServiceCompanyName}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
