--- a/CRMPhone/Dialogs/AddRatingDialog.xaml
+++ b/CRMPhone/Dialogs/AddRatingDialog.xaml
@@ -4,11 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Исполнитель заявки" Height="220" Width="420" MinWidth ="420" MinHeight="220"
+        Title="Исполнитель заявки" Height="240" Width="420" MinWidth ="420" MinHeight="240"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -22,11 +23,14 @@
                 </ComboBox>
             </DockPanel>
         <DockPanel Grid.Row="1">
+            <CheckBox Margin="5" VerticalAlignment="Center" Content="Плохая работа исполнителя!" Foreground="Red" IsChecked="{Binding ServiceCompanyBadWork}"/>
+        </DockPanel>
+        <DockPanel Grid.Row="2">
             <TextBlock Margin="5" VerticalAlignment="Center" Text="Комментарий:"/>
             <TextBox Margin="5" HorizontalAlignment="Right" Width="300" Height="100" MaxLength="255" TextWrapping="Wrap" Text="{Binding Description}">
             </TextBox>
         </DockPanel>
-        <StackPanel Grid.Row="2" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="3" HorizontalAlignment="Right">
                 <Button Margin="5" Width="120" Height="24" Command="{Binding Path=SaveCommand}">Сохранить</Button>
             </StackPanel>
         </Grid>
