--- a/CRMPhone/Controls/RequestControl.xaml
+++ b/CRMPhone/Controls/RequestControl.xaml
@@ -66,7 +66,7 @@
                         <TextBlock Margin="3" VerticalAlignment="Center" Text="Платная:"/>
                         <ComboBox Margin="3" Width="120" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedPayment}" ItemsSource="{Binding PaymentList}" IsEditable="True" />
                     </DockPanel>
-                    <CheckBox Margin="5" VerticalAlignment="Center" Content="Плохая работа исполнителя!" Foreground="Red" IsChecked="{Binding ServiceCompanyBadWork}"/>
+                    <CheckBox Margin="5" VerticalAlignment="Center" Content="Для обсуждения!" Foreground="Red" IsChecked="{Binding ServiceCompanyBadWork}"/>
                 </WrapPanel>
             </Expander>
 
